--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- ***** Hero Section ***** -->
-       <header class="header" role="banner" id="top">>
+       <header class="header" role="banner" id="top">
         <nav class="nav" role="navigation">
             <img src="" class="logo" id="logo"/>
             <ol class="nav__items">
@@ -39,8 +39,12 @@
                     <p class="section-number">01</p>
                     <h1 class="section-title">History</h1>
                 </div>
-                <p class = section-description>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in ante viverra, rutrum erat rutrum, consectetur mi. Proin at maximus est. Nullam purus ex, iaculis sed erat sed, blandit tincidunt quam. Cras scelerisque id quam sed dignissim Pellentesque urna nunc, gravida quis hendrerit ac, tristique ut quam. Vivamus suscipit dignissim tortor nec congue. 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quisquam mollitia esse commodi
+                    debitis
+                    obcaecati. Pariatur ut saepe asperiores eveniet. Harum voluptatibus cupiditate tempora
+                    reprehenderit
+                    sint tenetur eaque, soluta maiores.Nam soluta optio repudiandae quis omnis iure officiis totam
+                    iste
                 </p>
             </div>
             <div class="carousel">
@@ -63,21 +67,81 @@
                     <img src="" class="carousel-image"/>
                 </div>
                 <div class="carousel-buttons">
-                    <span class="dotOne"></span>
-                    <span class="dotTwo"></span>
-                    <span class="dotThree"></span>
+                    <span class="carousel-dots" id="dot-one">.</span>
+                    <span class="carousel-dots" id="dot-two">.</span>
+                    <span class="carousel-dots" id="dot-three">.</span>
                 </div>
             </div>
         </section>
 
         <!-- ***** Team ***** -->
         <section class="team" id="team">
+            <div class = "section-information">
+                <div class="section-header">
+                    <p class="section-number">01</p>
+                    <h1 class="section-title">History</h1>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quisquam mollitia esse commodi
+                    debitis
+                    obcaecati. Pariatur ut saepe asperiores eveniet. Harum voluptatibus cupiditate tempora
+                    reprehenderit
+                    sint tenetur eaque, soluta maiores.Nam soluta optio repudiandae quis omnis iure officiis totam
+                    iste
+                </p>
+            </div>
+
+            <div class="tabs-container">
+                <button class="tabs">MOUNTAIN 1</button>
+                <button class="tabs">MOUNTAIN 2</button>
+            </div>
+
+            <div class="schedule-banner">
+                <div class="schedules" id="mountain-1">
+                    <h2 class="schedule-title">Schedule</h2>
+                    <div class="climb-date-container">
+                        <p class="climb-date">25 Nov 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">28 Nov 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">18 Dec 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">7 Jan 2017</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                </div>
+                <div class="schedules" id="mountain-2">
+                    <h2 class="schedule-title">Schedule</h2>
+                    <div class="climb-date-container">
+                        <p class="climb-date">17 Nov 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">13 Dec 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">28 Dec 2016</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                    <div class="climb-date-container">
+                        <p class="climb-date">9 Feb 2017</p>
+                        <p>Vestibulum viverra</p>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
         <!-- ***** Footer ***** -->
         <footer role="contentinfo" class="footer">
-
+            <img src="" class="footer-logo">
+            <p>COPYRIGHT 2016. ALL RIGHTS RESERVED.</p>
         </footer>
         <script src="index.js"></script>
     </body>
